--- a/savat.css
+++ b/savat.css
@@ -210,6 +210,8 @@ footer {
   padding: 6px 19px;
   cursor: pointer;
 }
+
+
 @media (max-width: 768px) {
      /* --- MOBIL MENYU (YOPISHIB TURADI) --- */
     .mobile-bottom-nav {
@@ -268,7 +270,9 @@ footer {
     .banner h1 {
         font-size: 2.0em;
     }
-
+    header{
+    display: none;
+    }
     .product-grid {
         flex-direction: column;
         align-items: center;
@@ -345,3 +349,4 @@ body { font-family: sans-serif; }
     from { transform: translateY(-50px); opacity: 0; }
     to { transform: translateY(0); opacity: 1; }
 }
+
